[package]
name = "df"
version = "0.1.0"
authors = ["SET001 <settydark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
amethyst = { version = "0.15", features = ["vulkan", "tiles"] }
serde = { version = "1.0.104", features = ["derive"] }
log = { version = "0.4.8", features = ["serde"] }


