[package]
name = "df"
version = "0.1.0"
authors = ["SET001 <settydark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
amethyst = {git="https://github.com/SET001/amethyst", branch="tilemap_update", version="0.16.0", features = ["optional"]}
serde = { version = "1.0.130", features = ["derive"] }
log = { version = "0.4.8", features = ["serde"] }
enum-map = { version = "0.6.2", features = ["serde"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.7.3"